results/27354977ad7d04ab399659be0647fdf4/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper({fitarraystring}, emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 27354977ad7d04ab399659be0647fdf4, {modelStrings},   argslist = (x, 0.65, data)
                                                           ^
SyntaxError: invalid syntax
